# loscheme

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  julia-ci.yml  python-ci.yml  rust-ci.yml  test.yml
examples/: compile_to_stack_vm.rs  count-tailcall.scm  factorial.scm  fib_stack_vm.rs  fib_stack_vm_compiled.rs  fib_stack_vm_handcrafted.rs  fibonacci-tailcall.scm  fibonacci_vm.rs  quicksort.scm  stack_vm.rs
julia/: Project.toml
julia/src/: LoScheme.jl
julia/test/: runtests.jl
python/: .gitignore
rust/: Cargo.toml  README.md
rust/src/: lib.rs
scripts/: ackermann.scm  collatz.scm  cond-recursion.scm  count-tail-call.scm  fibonacci.scm  newton-sqrt.scm  quicksort.scm
src/: char.rs  errors.rs  lib.rs  main.rs  parser.rs  rationals.rs  run.rs  rv32.rs  stack_vm.rs  treewalk.rs  utils.rs  vm.rs  web.rs
src/loscheme/: __init__.py  loscheme.py
src/stack_vm/: compiler.rs  vm.rs
src/treewalk/: base.rs  builtin.rs  char.rs  mod.rs  write.rs
test/: test_loscheme.py
tests/: test-1.scm  test-2.scm  test.rs
web/: index.html
