[package]
name = "loscheme"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
internment = "0.8.5"
rustc-hash = "2.0.0"
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
web = ["wasm-bindgen"]

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[lints.rust]
warnings = "deny"
